# cpp-learning

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cache-latency/: CMakeLists.txt  cache_test.c
class-experiments/: CMakeLists.txt  class_tests.cpp
compilation-define-test/: CMakeLists.txt  compilation-define-tests.cpp  print_const.h
dispatch-test/: CMakeLists.txt  dispatch-benchmark.cpp  dispatch-test.cpp  dispatch.h
eigen-experiments/: CMakeLists.txt  eigen-experiments.cpp
finufft/: CMakeLists.txt  example2d1many.cu
floating-points/: CMakeLists.txt  floating-point.cpp
highway-experiments/: CMakeLists.txt  highway.cpp  plots.ipynb
highway-experiments/highway-experiments/: CMakeLists.txt  highway.cpp
kernelgen/: CMakeLists.txt  README.md
kernelgen/include/kernelgen/: dispatch.hpp  kernelgen.hpp  unroll.hpp
kernelgen/samples/: dispatch_sample.cpp  unroll_sample.cpp
random plots/: plots.ipynb
sys-calls/: CMakeLists.txt  clone.cpp  results.md
xsimd/: CMakeLists.txt  complex_multiply.cpp  reduce_add.cpp  swizzle-sse2.cpp  swizzles.cpp
